deploy/k8s/svc-consent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-consent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-consent
  template:
    metadata:
      labels:
        app: svc-consent
    spec:
      containers:
        - name: svc-consent
          image: ghcr.io/uttambhatia/healthcarepatientengagement/svc-consent:latest
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
